log/build_2025-03-25_11-10-42/lane_angle/stderr.log
  File "/home/crofi/AutoModel_Rep/install/lane_angle/lib/python3.10/site-packages/lane_angle/lane_angle.py", line 47
    print(f"right lines: {len(right_lines}")            
                                           ^
SyntaxError: f-string: closing parenthesis '}' does not match opening parenthesis '('

